--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Operation</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-1.12.0.min.js"></script>
+    <script src="js/scripts.js"></script>
+    <title>Peek-a-boo</title>
   </head>
   <body>
-  
+    <div class="walrus-hidden">
+      <p>Let's play peek-a-boo. Click here to see a surprise!</p>
+    </div>
+    <div class="walrus-showing">
+      <p>What a cute walrus! Click here to hide her again.</p>
+      <img src="img/walrus.jpeg">
+    </div>
+
   </body>
 </html>
