--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Peek-a-boo</title>
   </head>
   <body>
-    <div class="walrus-hidden">
-      <p>Let's play peek-a-boo. Click here to see a surprise!</p>
+    <div id="walrus-hidden">
+      <p>Let's play peek-a-boo. <span class="clickable">Click here</span> to see a surprise!</p>
     </div>
-    <div class="walrus-showing">
-      <p>What a cute walrus! Click here to hide her again.</p>
+    <div id="walrus-showing">
+      <p>What a cute walrus! <span class="clickable">Click here</span> to hide her again.</p>
       <img src="img/walrus.jpeg">
     </div>
 
